Results: flushed out first draft text, added a couple citations. Methods: tried to tweak OR maps

--- a/OR_original_model.Rmd
+++ b/OR_original_model.Rmd
@@ -544,9 +544,11 @@ Rs = as.numeric(substr(names(elist),6,6))
 ## Divergence
 div.cov = sapply(stats,"[[","div.cov")
 plot(Rmult[Rs],div.cov,col=Qs,log="x",xlab="Variance Multiplier",ylab="Filter Coverage")
+legend("topright",legend=paste0(Qmult[1:2],"x"))
 
 div.median = sapply(stats,"[[","div.median")
 plot(Rmult[Rs],div.median,col=Qs,log="x",xlab="Variance Multiplier",ylab="Median Divergance")
+legend("topleft",legend=paste0(Qmult[1:2],"x"))
 
 div.slope = sapply(stats,function(x){coef(x$div.reg)[2]})
 plot(Rmult[Rs],div.slope,col=Qs,log="x",xlab="Variance Multiplier",ylab="Divergance Slope")
