--- a/supplemental.Rmd
+++ b/supplemental.Rmd
@@ -24,7 +24,7 @@ legend("bottomright",legend=c("model","data"),pch=c(NA,"+"),lty=c(1,NA),col=1:2)
 ```{r parameters,echo=FALSE}
 param.names = c("LUE","GAMMA","tauS","tauW","Av","sd_NEE","sd_leaf","sd_wood")
 param.desc = c("Light Use Efficiency","Fraction of GPP allocated to autotrophic respiration","Soil C residence time","Wood C residence time","Fraction of NPP allocated to leaves","NEE standard deviation","leaf C standard deviation","wood C standard deviation")
-param.table = cbind(param.names,param.desc,mle$par)
+param.table = cbind(param.names,param.desc,format(mle$par,digits=3,scientific=TRUE))
 colnames(param.table) <- c("Parameter","Description","Value")
 knitr::kable(param.table,caption="Calibrated model parameters")
 ```
